[tool.poetry]
name = "testcase"
version = "0.1.0"
description = ""
authors = ["bubled33 <zimnitskiymisha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
beanie = "^1.18.0"
pydantic = "^1.10.7"
aiohttp = "^3.8.4"
uvicorn = "^0.22.0"
dynaconf = "^3.1.12"
loguru = "^0.7.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
asgi-lifespan = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
